--- a/assets/action-adventure/assassins-creed-1.html
+++ b/assets/action-adventure/assassins-creed-1.html
@@ -38,7 +38,7 @@
           <img src="assets/header.jpg" alt="" />
           <div class="navbar">
             <li><a href="../../index.html">Home</a></li>
-            <li><a href="../../action.html">Ação/Aventura</a></li>
+            <li><a href="../../index.html#action">Ação/Aventura</a></li>
             <li><a href="#racing">Corrida</a></li>
             <li><a href="#sport">Esporte</a></li>
             <li><a href="#strategy">Estratégia</a></li>
@@ -64,7 +64,7 @@
       <iframe
         width="560"
         height="315"
-        src="https://www.youtube.com/embed/Wz8D7moT288?si=yX5i_ZZXkXjn3Uqy"
+        src="https://www.youtube.com/embed/RjQ6ZtyXoA0?si=6sexl_q6azfQOsEr"
         title="YouTube video player"
         frameborder="0"
         allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
@@ -75,21 +75,33 @@
     <!-- About -->
     <div class="about container">
       <h2>Plataforma:</h2>
-      <p>Mobile/Android</p><br>
+      <p>PC/PS3/Xbox 360</p>
+      <br />
       <h2>Sobre o game:</h2>
       <p>
-        A Treta dos Irmãos Piologo é um jogo de ação/plataforma onde o
-        personagem principal é Rodrigo Piologo, que teve seus preciosos consoles
-        roubados pelo seu irmão, Ricardo Piologo. Ricardo levou os consoles de
-        Rodrigo para dentro de um mundo virtual cheio de referências à jogos
-        clássicos e todo o universo que os irmãos criaram nesses últimos vinte
-        anos. Cabe agora à Rodrigo embarcar nessa grande aventura, enfrentar os
-        mais diversos inimigos, derrotar bosses, coletar tesouros e chegar ao
-        desafio final, seu irmão. E claro, para essa jornada nada mais justo do
-        que a ajuda de seu fiel escudeiro, Pastor Metralhadora. Com armas
-        mirabolantes, jogabilidade fácil, humor ao nível extremo e inúmeras
-        referências, A Treta dos Irmãos Piologo foi feito para agradar tanto os
-        jogadores nostálgicos quanto os jogadores desta nova geração.
+        Assassin's Creed é um jogo eletrônico de ação-aventura desenvolvido pela
+        Ubisoft Montreal e publicado pela Ubisoft. É o primeiro título da série
+        Assassin's Creed. O jogo foi lançado para PlayStation 3 e Xbox 360 em
+        novembro de 2007. O enredo se passa em uma história fictícia de eventos
+        do mundo real, ocorrendo principalmente durante a Terceira Cruzada na
+        Terra Santa em 1191. O personagem do jogador é um homem moderno chamado
+        Desmond Miles que, por meio de uma máquina chamada "Animus", revive as
+        memórias genéticas de seu ancestral, Altaïr Ibn-La'Ahad. Por meio desse
+        dispositivo de trama, detalhes emergem sobre uma luta milenar entre duas
+        facções: a Irmandade dos Assassinos (inspirada na Ordem dos Assassinos
+        da vida real), que luta para preservar a paz e o livre arbítrio, e a
+        Ordem dos Templários (inspirada na ordem militar dos Cavaleiros
+        Templários), que acreditam que o controle é necessário para manter a
+        paz. Ambas as facções lutam por artefatos poderosos de origens
+        misteriosas conhecidos como "Peças do Éden" para ganhar vantagem uma
+        sobre a outra. A parte do século XII da história segue Altaïr, um
+        Assassino, que embarca em uma busca para recuperar sua honra após não
+        conseguir recuperar um desses artefatos dos Templários; ele o faz
+        encontrando e assassinando nove alvos em toda a Terra Santa. O jogo
+        inclui um mundo aberto que contém quatro cidades - Massiafe, Jerusalém,
+        Acre e Damasco - e se concentra no uso das habilidades de combate,
+        furtividade e parkour de Altaïr para derrotar inimigos e explorar o
+        ambiente.
       </p>
     </div>
 
