--- a/action.html
+++ b/action.html
@@ -90,26 +90,32 @@
         </div>
         <!-- Box -->
         <div class="box">
-          <img src="./assets/racing/carnage-racing.png" alt=""/>
+          <a href="./assets/action-adventure/bad-day-in-LA.html">
+            <img src="./assets/action-adventure/bad-day-in-LA.png" alt=""/>
+          </a>
             <div class="box-text">
-              <h2>Carnage Racing Game</h2>
+              <h2>Bad Day in LA</h2>
               <h3>PC</h3>
             </div>
         </div>
         <!-- Box -->
         <div class="box">
-          <img src="./assets/racing/cars.png" alt=""/>
+          <a href="./assets/action-adventure/just-cause.html">
+            <img src="./assets/action-adventure/just-cause.png" alt=""/>
+          </a>
             <div class="box-text">
-              <h2>Cars The Video Game</h2>
-              <h3>PC</h3>
+              <h2>Just Cause</h2>
+              <h3>PC/PS2/Xbox/Xbox 360</h3>
             </div>
         </div>
         <!-- Box -->
         <div class="box">
-          <img src="./assets/racing/cars-mater-national.png" alt=""/>
+          <a href="./assets/action-adventure/just-cause-2.html">
+            <img src="./assets/action-adventure/just-cause-2.png" alt=""/>
+          </a>
             <div class="box-text">
-              <h2>Cars Mater National Championship</h2>
-              <h3>PC</h3>
+              <h2>Just Cause 2</h2>
+              <h3>PC/PS3/Xbox 360</h3>
             </div>
         </div>
         <!-- Box -->
