--- a/assets/action-adventure/just-cause-2.html
+++ b/assets/action-adventure/just-cause-2.html
@@ -61,15 +61,7 @@
 
     <!-- Video -->
     <div class="video-container container">
-      <iframe
-        width="560"
-        height="315"
-        src="https://www.youtube.com/embed/RjQ6ZtyXoA0?si=6sexl_q6azfQOsEr"
-        title="YouTube video player"
-        frameborder="0"
-        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-        allowfullscreen
-      ></iframe>
+      <iframe width="560" height="315" src="https://www.youtube.com/embed/pbhPGQkAS4k?si=cjkOfecnEGHGkxcQ" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
     </div>
 
     <!-- About -->
@@ -79,29 +71,9 @@
       <br />
       <h2>Sobre o game:</h2>
       <p>
-        Assassin's Creed é um jogo eletrônico de ação-aventura desenvolvido pela
-        Ubisoft Montreal e publicado pela Ubisoft. É o primeiro título da série
-        Assassin's Creed. O jogo foi lançado para PlayStation 3 e Xbox 360 em
-        novembro de 2007. O enredo se passa em uma história fictícia de eventos
-        do mundo real, ocorrendo principalmente durante a Terceira Cruzada na
-        Terra Santa em 1191. O personagem do jogador é um homem moderno chamado
-        Desmond Miles que, por meio de uma máquina chamada "Animus", revive as
-        memórias genéticas de seu ancestral, Altaïr Ibn-La'Ahad. Por meio desse
-        dispositivo de trama, detalhes emergem sobre uma luta milenar entre duas
-        facções: a Irmandade dos Assassinos (inspirada na Ordem dos Assassinos
-        da vida real), que luta para preservar a paz e o livre arbítrio, e a
-        Ordem dos Templários (inspirada na ordem militar dos Cavaleiros
-        Templários), que acreditam que o controle é necessário para manter a
-        paz. Ambas as facções lutam por artefatos poderosos de origens
-        misteriosas conhecidos como "Peças do Éden" para ganhar vantagem uma
-        sobre a outra. A parte do século XII da história segue Altaïr, um
-        Assassino, que embarca em uma busca para recuperar sua honra após não
-        conseguir recuperar um desses artefatos dos Templários; ele o faz
-        encontrando e assassinando nove alvos em toda a Terra Santa. O jogo
-        inclui um mundo aberto que contém quatro cidades - Massiafe, Jerusalém,
-        Acre e Damasco - e se concentra no uso das habilidades de combate,
-        furtividade e parkour de Altaïr para derrotar inimigos e explorar o
-        ambiente.
+        Just Cause 2 é um jogo de mundo aberto de ação e aventura desenvolvido pela Avalanche Studios, publicado pela Eidos Interactive e distribuído pela Square Enix Europe. É uma sequência do jogo de 2006, Just Cause. O jogo possui mais de 8000 quilômetros (5000 milhas) quadrados de ilha para se explorar.
+
+        Just Cause 2 usa o motor Avalanche Engine 2.00, uma versão atualizada do que foi utilizado em Just Cause. O jogo se passa na ilha fictícia de Panau, localizada no Sudeste Asiático. Rico Rodriguez retorna como protagonista, com o objetivo de derrubar o ditador do mal Pandak "Baby" Panay e confrontar seu antigo mentor, Tom Sheldon.
       </p>
     </div>
 
