--- a/assets/action-adventure/just-cause.html
+++ b/assets/action-adventure/just-cause.html
@@ -61,47 +61,19 @@
 
     <!-- Video -->
     <div class="video-container container">
-      <iframe
-        width="560"
-        height="315"
-        src="https://www.youtube.com/embed/RjQ6ZtyXoA0?si=6sexl_q6azfQOsEr"
-        title="YouTube video player"
-        frameborder="0"
-        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-        allowfullscreen
-      ></iframe>
+      <iframe width="560" height="315" src="https://www.youtube.com/embed/wJ-CvJsgG2s?si=IyHMiOyygtWG86J4" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
     </div>
 
     <!-- About -->
     <div class="about container">
       <h2>Plataforma:</h2>
-      <p>PC/PS3/Xbox 360</p>
+      <p>PC/PS2/Xbox/Xbox 360</p>
       <br />
       <h2>Sobre o game:</h2>
       <p>
-        Assassin's Creed é um jogo eletrônico de ação-aventura desenvolvido pela
-        Ubisoft Montreal e publicado pela Ubisoft. É o primeiro título da série
-        Assassin's Creed. O jogo foi lançado para PlayStation 3 e Xbox 360 em
-        novembro de 2007. O enredo se passa em uma história fictícia de eventos
-        do mundo real, ocorrendo principalmente durante a Terceira Cruzada na
-        Terra Santa em 1191. O personagem do jogador é um homem moderno chamado
-        Desmond Miles que, por meio de uma máquina chamada "Animus", revive as
-        memórias genéticas de seu ancestral, Altaïr Ibn-La'Ahad. Por meio desse
-        dispositivo de trama, detalhes emergem sobre uma luta milenar entre duas
-        facções: a Irmandade dos Assassinos (inspirada na Ordem dos Assassinos
-        da vida real), que luta para preservar a paz e o livre arbítrio, e a
-        Ordem dos Templários (inspirada na ordem militar dos Cavaleiros
-        Templários), que acreditam que o controle é necessário para manter a
-        paz. Ambas as facções lutam por artefatos poderosos de origens
-        misteriosas conhecidos como "Peças do Éden" para ganhar vantagem uma
-        sobre a outra. A parte do século XII da história segue Altaïr, um
-        Assassino, que embarca em uma busca para recuperar sua honra após não
-        conseguir recuperar um desses artefatos dos Templários; ele o faz
-        encontrando e assassinando nove alvos em toda a Terra Santa. O jogo
-        inclui um mundo aberto que contém quatro cidades - Massiafe, Jerusalém,
-        Acre e Damasco - e se concentra no uso das habilidades de combate,
-        furtividade e parkour de Altaïr para derrotar inimigos e explorar o
-        ambiente.
+        Just Cause é um jogo de ação-aventura jogado num ambiente de mundo aberto. Foi produzido pela Avalanche Studios e publicado pela Eidos Interactive, o primeiro da série Just Cause. Foi lançado para Microsoft Windows, PlayStation 2, Xbox e Xbox 360. A área ficticia que se pode explorar no jogo tem aproximadamente 250,000 acre (1,012 km2; 391 sq mi) em tamanho, com 21 missões principais juntamente com mais de 300 secundárias.
+
+        Just Cause decorre em San Esperito, uma ilha fictícia das Caraíbas. Rico Rodriguez, um operacional de uma organização conhecida como Agency, foi contratado pelo seu comandante Tom Sheldon para participar na guerrilha que quer destituir o ditador da ilha, Salvador Mendoza, que se julga estar em posse de armas de destruição maciça.
       </p>
     </div>
 
