--- a/assets/action-adventure/far-cry.html
+++ b/assets/action-adventure/far-cry.html
@@ -61,35 +61,17 @@
 
     <!-- Video -->
     <div class="video-container container">
-      <iframe
-        width="560"
-        height="315"
-        src="https://www.youtube.com/embed/Wz8D7moT288?si=yX5i_ZZXkXjn3Uqy"
-        title="YouTube video player"
-        frameborder="0"
-        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-        allowfullscreen
-      ></iframe>
+      <iframe width="560" height="315" src="https://www.youtube.com/embed/1IhYnvb_dCk?si=_H6DZI-kH8UY00_-" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
     </div>
 
     <!-- About -->
     <div class="about container">
       <h2>Plataforma:</h2>
-      <p>Mobile/Android</p><br>
+      <p>PC</p>
+      <br />
       <h2>Sobre o game:</h2>
       <p>
-        A Treta dos Irmãos Piologo é um jogo de ação/plataforma onde o
-        personagem principal é Rodrigo Piologo, que teve seus preciosos consoles
-        roubados pelo seu irmão, Ricardo Piologo. Ricardo levou os consoles de
-        Rodrigo para dentro de um mundo virtual cheio de referências à jogos
-        clássicos e todo o universo que os irmãos criaram nesses últimos vinte
-        anos. Cabe agora à Rodrigo embarcar nessa grande aventura, enfrentar os
-        mais diversos inimigos, derrotar bosses, coletar tesouros e chegar ao
-        desafio final, seu irmão. E claro, para essa jornada nada mais justo do
-        que a ajuda de seu fiel escudeiro, Pastor Metralhadora. Com armas
-        mirabolantes, jogabilidade fácil, humor ao nível extremo e inúmeras
-        referências, A Treta dos Irmãos Piologo foi feito para agradar tanto os
-        jogadores nostálgicos quanto os jogadores desta nova geração.
+        Far Cry é um jogo de tiro em primeira pessoa de 2004 desenvolvido pela Crytek e publicado pela Ubisoft. É o primeiro título da franquia Far Cry. Situado em um misterioso arquipélago tropical, o jogo segue Jack Carver, um ex-agente das forças especiais americanas, enquanto procura a jornalista Valerie Constantine, que o acompanhou às ilhas, mas desapareceu depois que seu barco foi destruído por mercenários. Enquanto Jack explora as ilhas, ele começa a descobrir os horríveis experimentos genéticos que estão sendo realizados na vida selvagem local e deve confrontar o cientista louco por trás deles.
       </p>
     </div>
 
