--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
           <div class="navbar">
             <li><a href="index.html">Home</a></li>
             <li><a href="action.html">Ação/Aventura</a></li>
-            <li><a href="#racing">Corrida</a></li>
+            <li><a href="racing.html">Corrida</a></li>
             <li><a href="#sport">Esporte</a></li>
             <li><a href="#strategy">Estratégia</a></li>
             <li><a href="#infant">Infantil</a></li>
@@ -114,6 +114,18 @@
           <div class="swiper-slide">
             <div class="box">
               <a href="./assets/action-adventure/just-cause.html">
+                <img src="./assets/action-adventure/far-cry.webp" alt="" />
+              </a>
+              <div class="box-text">
+                <h2>Far Cry</h2>
+                <h3>PC</h3>
+              </div>
+            </div>
+          </div>
+          <!-- Slide -->
+          <div class="swiper-slide">
+            <div class="box">
+              <a href="./assets/action-adventure/just-cause.html">
                 <img src="./assets/action-adventure/just-cause.png" alt="" />
               </a>
               <div class="box-text">
@@ -131,16 +143,6 @@
               <div class="box-text">
                 <h2>Just Cause 2</h2>
                 <h3>PC/PS3/Xbox 360</h3>
-              </div>
-            </div>
-          </div>
-          <!-- Slide -->
-          <div class="swiper-slide">
-            <div class="box">
-              <img src="./assets/action-adventure/just-cause-2.png" alt="" />
-              <div class="box-text">
-                <h2>Just Cause 2</h2>
-                <h3>PC</h3>
               </div>
             </div>
           </div>
@@ -398,7 +400,7 @@
         </div>
       </div>
       <div class="next-page">
-        <a href="#">Ver mais</a>
+        <a href="./racing.html">Ver mais</a>
       </div>
     </section>
     <!-- Racing Section End-->
