--- a/racing.html
+++ b/racing.html
@@ -60,11 +60,11 @@
       </div>
     </header>
 
-    <!-- Action Section Start-->
-    <section class="action container" id="action">
+    <!-- Racing Section Start-->
+    <section class="racing container" id="racing">
       <div class="heading">
-        <i class="bx bxs-flame"></i>
-        <h2>Ação/Aventura</h2>
+        <i class="bx bxs-flag-checkered"></i>
+        <h2>Corrida</h2>
       </div>
       <!-- Content -->
       <!-- Box -->
@@ -128,7 +128,7 @@
         </div>
       </div>
     </section>
-    <!-- Action Section End-->
+    <!-- Racing Section End-->
 
     <footer>
       <p>© 2023 - Samuel de Lima da Silva</p>
