--- a/assets/action-adventure/just-cause.html
+++ b/assets/action-adventure/just-cause.html
@@ -6,7 +6,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Game Page</title>
-    <link rel="icon" href="assets/logo.ico" type="image/x-icon" />
+    <link rel="icon" href="../../assets/logo.ico" type="image/x-icon" />
     <!-- Box Icons -->
     <link
       href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css"
