--- a/simulation.html
+++ b/simulation.html
@@ -60,18 +60,18 @@
       </div>
     </header>
 
-    <!-- Action Section Start-->
-    <section class="action container" id="action">
+    <!-- Simulation Section Start-->
+    <section class="sport container" id="racing">
       <div class="heading">
-        <i class="bx bxs-flame"></i>
-        <h2>Ação/Aventura</h2>
+        <i class="bx bxs-universal-access"></i>
+        <h2>Simulação</h2>
       </div>
       <!-- Content -->
       <!-- Box -->
       <div class="games-content">
         <div class="box">
-          <a href="./assets/action-adventure/a-treta-dos-irmao-piologo.html">
-            <img src="./assets/action-adventure/a-treta-dos-irmao-piologo.png" alt=""/>
+          <a href="#">
+            <img src="#" alt=""/>
           </a>
           <div class="box-text">
             <h2>A Treta dos Irmãos Piologo</h2>
@@ -80,8 +80,8 @@
         </div>
         <!-- Box -->
         <div class="box">
-          <a href="./assets/action-adventure/assassins-creed-1.html">
-            <img src="./assets/action-adventure/assassins-creed-1.png" alt=""/>
+          <a href="#">
+            <img src="#" alt=""/>
           </a>
           <div class="box-text">
             <h2>Assassin's Creed</h2>
@@ -90,8 +90,8 @@
         </div>
         <!-- Box -->
         <div class="box">
-          <a href="./assets/action-adventure/bad-day-in-LA.html">
-            <img src="./assets/action-adventure/bad-day-in-LA.png" alt=""/>
+          <a href="#">
+            <img src="#" alt=""/>
           </a>
             <div class="box-text">
               <h2>Bad Day in LA</h2>
@@ -100,37 +100,17 @@
         </div>
         <!-- Box -->
         <div class="box">
-          <a href="./assets/action-adventure/far-cry.html">
-            <img src="./assets/action-adventure/far-cry.webp" alt=""/>
-          </a>
-            <div class="box-text">
-              <h2>Far Cry</h2>
-              <h3>PC</h3>
-            </div>
-        </div>
-        <!-- Box -->
-        <div class="box">
-          <a href="./assets/action-adventure/just-cause.html">
-            <img src="./assets/action-adventure/just-cause.png" alt=""/>
+          <a href="#">
+            <img src="#" alt=""/>
           </a>
             <div class="box-text">
               <h2>Just Cause</h2>
               <h3>PC/PS2/Xbox/Xbox 360</h3>
             </div>
         </div>
-        <!-- Box -->
-        <div class="box">
-          <a href="./assets/action-adventure/just-cause-2.html">
-            <img src="./assets/action-adventure/just-cause-2.png" alt=""/>
-          </a>
-            <div class="box-text">
-              <h2>Just Cause 2</h2>
-              <h3>PC/PS3/Xbox 360</h3>
-            </div>
-        </div>
       </div>
     </section>
-    <!-- Action Section End-->
+    <!-- Simulation Section End-->
 
     <footer>
       <p>© 2023 - Samuel de Lima da Silva</p>
