--- a/assets/action-adventure/a-treta-dos-irmao-piologo.html
+++ b/assets/action-adventure/a-treta-dos-irmao-piologo.html
@@ -39,12 +39,12 @@
           <div class="navbar">
             <li><a href="../../index.html">Home</a></li>
             <li><a href="../../action.html">Ação/Aventura</a></li>
-            <li><a href="#racing">Corrida</a></li>
-            <li><a href="#sport">Esporte</a></li>
-            <li><a href="#strategy">Estratégia</a></li>
-            <li><a href="#infant">Infantil</a></li>
-            <li><a href="#simulation">Simulação</a></li>
-            <li><a href="#shooting">Tiro/Guerra</a></li>
+            <li><a href="../../racing.html">Corrida</a></li>
+            <li><a href="../../sport.html">Esporte</a></li>
+            <li><a href="../../strategy.html">Estratégia</a></li>
+            <li><a href="../../infant.html">Infantil</a></li>
+            <li><a href="../../simulation.html">Simulação</a></li>
+            <li><a href="../../shooting.html">Tiro/Guerra</a></li>
             <li><a href="https://docs.google.com/spreadsheets/d/1mcFCpCfGAgobrLXBVEJjqaxDvtA_TnjtLoZVLFL3OD4/edit?usp=sharing"
           target="_blank">Lista Completa</a></li>
           </div>
