--- a/racing.html
+++ b/racing.html
@@ -41,11 +41,11 @@
             <li><a href="index.html">Home</a></li>
             <li><a href="action.html">Ação/Aventura</a></li>
             <li><a href="racing.html">Corrida</a></li>
-            <li><a href="#sport">Esporte</a></li>
-            <li><a href="#strategy">Estratégia</a></li>
-            <li><a href="#infant">Infantil</a></li>
-            <li><a href="#simulation">Simulação</a></li>
-            <li><a href="#shooting">Tiro/Guerra</a></li>
+            <li><a href="sport.html">Esporte</a></li>
+            <li><a href="strategy.html">Estratégia</a></li>
+            <li><a href="infant.html">Infantil</a></li>
+            <li><a href="simulation.html">Simulação</a></li>
+            <li><a href="shooting.html">Tiro/Guerra</a></li>
             <li><a href="https://docs.google.com/spreadsheets/d/1mcFCpCfGAgobrLXBVEJjqaxDvtA_TnjtLoZVLFL3OD4/edit?usp=sharing"
           target="_blank">Lista Completa</a></li>
           </div>
@@ -70,59 +70,41 @@
       <!-- Box -->
       <div class="games-content">
         <div class="box">
-          <a href="./assets/action-adventure/a-treta-dos-irmao-piologo.html">
-            <img src="./assets/action-adventure/a-treta-dos-irmao-piologo.png" alt=""/>
+          <a href="#">
+            <img src="./assets/racing/4x4-evo2.png" alt=""/>
           </a>
           <div class="box-text">
-            <h2>A Treta dos Irmãos Piologo</h2>
-            <h3>Mobile</h3>
+            <h2>4X4 EVO 2</h2>
+            <h3>PC</h3>
           </div>
         </div>
         <!-- Box -->
         <div class="box">
-          <a href="./assets/action-adventure/assassins-creed-1.html">
-            <img src="./assets/action-adventure/assassins-creed-1.png" alt=""/>
+          <a href="#">
+            <img src="./assets/racing/bang-bang-racing.png" alt=""/>
           </a>
           <div class="box-text">
-            <h2>Assassin's Creed</h2>
-            <h3>PC/PS3/Xbox 360</h3>
+            <h2>Bang Bang Racing</h2>
+            <h3>PC</h3>
           </div>
         </div>
         <!-- Box -->
         <div class="box">
-          <a href="./assets/action-adventure/bad-day-in-LA.html">
-            <img src="./assets/action-adventure/bad-day-in-LA.png" alt=""/>
+          <a href="#">
+            <img src="./assets/racing/carnage-racing.png" alt=""/>
           </a>
             <div class="box-text">
-              <h2>Bad Day in LA</h2>
+              <h2>Carnage Racing</h2>
               <h3>PC</h3>
             </div>
         </div>
         <!-- Box -->
         <div class="box">
-          <a href="./assets/action-adventure/just-cause.html">
-            <img src="./assets/action-adventure/just-cause.png" alt=""/>
+          <a href="#">
+            <img src="./assets/racing/cars.png" alt=""/>
           </a>
             <div class="box-text">
-              <h2>Just Cause</h2>
-              <h3>PC/PS2/Xbox/Xbox 360</h3>
-            </div>
-        </div>
-        <!-- Box -->
-        <div class="box">
-          <a href="./assets/action-adventure/just-cause-2.html">
-            <img src="./assets/action-adventure/just-cause-2.png" alt=""/>
-          </a>
-            <div class="box-text">
-              <h2>Just Cause 2</h2>
-              <h3>PC/PS3/Xbox 360</h3>
-            </div>
-        </div>
-        <!-- Box -->
-        <div class="box">
-          <img src="./assets/racing/cars2.png" alt=""/>
-            <div class="box-text">
-              <h2>Cars 2</h2>
+              <h2>Cars</h2>
               <h3>PC</h3>
             </div>
         </div>
