--- a/action.html
+++ b/action.html
@@ -128,6 +128,166 @@
               <h3>PC/PS3/Xbox 360</h3>
             </div>
         </div>
+        <!-- Box -->
+        <div class="box">
+          <a href="#">
+            <img src="./assets/action-adventure/lego-batman.png" alt=""/>
+          </a>
+            <div class="box-text">
+              <h2>LEGO Batman</h2>
+              <h3>-</h3>
+            </div>
+        </div>
+        <!-- Box -->
+        <div class="box">
+          <a href="#">
+            <img src="./assets/action-adventure/lego-indiana-jones.png" alt=""/>
+          </a>
+            <div class="box-text">
+              <h2>LEGO Indiana Jones</h2>
+              <h3>-</h3>
+            </div>
+        </div>
+        <!-- Box -->
+        <div class="box">
+          <a href="#">
+            <img src="./assets/action-adventure/lego-indiana-jones2.png" alt=""/>
+          </a>
+            <div class="box-text">
+              <h2>LEGO Indiana Jones 2</h2>
+              <h3>-</h3>
+            </div>
+        </div>
+        <!-- Box -->
+        <div class="box">
+          <a href="#">
+            <img src="./assets/action-adventure/lego-marvel-super-heroes.png" alt=""/>
+          </a>
+            <div class="box-text">
+              <h2>LEGO Marvel Super Heroes</h2>
+              <h3>-</h3>
+            </div>
+        </div>
+        <!-- Box -->
+        <div class="box">
+          <a href="#">
+            <img src="./assets/action-adventure/lego-pirates-of-the-caribbean.png" alt=""/>
+          </a>
+            <div class="box-text">
+              <h2>LEGO Pirates of the Caribbean</h2>
+              <h3>-</h3>
+            </div>
+        </div>
+        <!-- Box -->
+        <div class="box">
+          <a href="#">
+            <img src="./assets/action-adventure/lego-star-wars.png" alt=""/>
+          </a>
+            <div class="box-text">
+              <h2>LEGO Star Wars</h2>
+              <h3>-</h3>
+            </div>
+        </div>
+        <!-- Box -->
+        <div class="box">
+          <a href="#">
+            <img src="./assets/action-adventure/lego-star-wars2.webp" alt=""/>
+          </a>
+            <div class="box-text">
+              <h2>LEGO Star Wars II</h2>
+              <h3>-</h3>
+            </div>
+        </div>
+        <!-- Box -->
+        <div class="box">
+          <a href="#">
+            <img src="./assets/action-adventure/lego-star-wars3.png" alt=""/>
+          </a>
+            <div class="box-text">
+              <h2>LEGO Star Wars III</h2>
+              <h3>-</h3>
+            </div>
+        </div>
+        <!-- Box -->
+        <div class="box">
+          <a href="#">
+            <img src="./assets/action-adventure/mafia.webp" alt=""/>
+          </a>
+            <div class="box-text">
+              <h2>Mafia</h2>
+              <h3>-</h3>
+            </div>
+        </div>
+        <!-- Box -->
+        <div class="box">
+          <a href="#">
+            <img src="./assets/action-adventure/mafia-2.png" alt=""/>
+          </a>
+            <div class="box-text">
+              <h2>Mafia II</h2>
+              <h3>-</h3>
+            </div>
+        </div>
+        <!-- Box -->
+        <div class="box">
+          <a href="#">
+            <img src="./assets/action-adventure/mouth-defender.png" alt=""/>
+          </a>
+            <div class="box-text">
+              <h2>Mouth Defender</h2>
+              <h3>-</h3>
+            </div>
+        </div>
+        <!-- Box -->
+        <div class="box">
+          <a href="#">
+            <img src="./assets/action-adventure/tom-clancys-the-division.jpg" alt=""/>
+          </a>
+            <div class="box-text">
+              <h2>Tom Clancy's The Division</h2>
+              <h3>-</h3>
+            </div>
+        </div>
+        <!-- Box -->
+        <div class="box">
+          <a href="#">
+            <img src="./assets/action-adventure/tomb-raider.jpg" alt=""/>
+          </a>
+            <div class="box-text">
+              <h2>Tomb Raider</h2>
+              <h3>-</h3>
+            </div>
+        </div>
+        <!-- Box -->
+        <div class="box">
+          <a href="#">
+            <img src="./assets/action-adventure/tomb-raider-legend.png" alt=""/>
+          </a>
+            <div class="box-text">
+              <h2>Tomb Raider - Legend</h2>
+              <h3>-</h3>
+            </div>
+        </div>
+        <!-- Box -->
+        <div class="box">
+          <a href="#">
+            <img src="./assets/action-adventure/watch-dogs.webp" alt=""/>
+          </a>
+            <div class="box-text">
+              <h2>Watch Dogs</h2>
+              <h3>-</h3>
+            </div>
+        </div>
+        <!-- Box -->
+        <div class="box">
+          <a href="#">
+            <img src="./assets/action-adventure/watch-dogs-2.jpg" alt=""/>
+          </a>
+            <div class="box-text">
+              <h2>Watch Dogs 2</h2>
+              <h3>-</h3>
+            </div>
+        </div>
       </div>
     </section>
     <!-- Action Section End-->
