--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
             <li><a href="strategy.html">Estratégia</a></li>
             <li><a href="#infant">Infantil</a></li>
             <li><a href="#simulation">Simulação</a></li>
-            <li><a href="#shooting">Tiro/Guerra</a></li>
+            <li><a href="shooting.html">Tiro/Guerra</a></li>
             <li>
               <a
                 href="https://docs.google.com/spreadsheets/d/1mcFCpCfGAgobrLXBVEJjqaxDvtA_TnjtLoZVLFL3OD4/edit?usp=sharing"
