--- a/racing.html
+++ b/racing.html
@@ -75,7 +75,17 @@
           </a>
           <div class="box-text">
             <h2>4X4 EVO 2</h2>
-            <h3>PC</h3>
+            <h3>-</h3>
+          </div>
+        </div>
+        <!-- Box -->
+        <div class="box">
+          <a href="#">
+            <img src="./assets/racing/asphalt-streetstorm.webp" alt=""/>
+          </a>
+          <div class="box-text">
+            <h2>Asphalt Street Storm Racing</h2>
+            <h3>-</h3>
           </div>
         </div>
         <!-- Box -->
@@ -85,7 +95,7 @@
           </a>
           <div class="box-text">
             <h2>Bang Bang Racing</h2>
-            <h3>PC</h3>
+            <h3>-</h3>
           </div>
         </div>
         <!-- Box -->
@@ -95,7 +105,7 @@
           </a>
             <div class="box-text">
               <h2>Carnage Racing</h2>
-              <h3>PC</h3>
+              <h3>-</h3>
             </div>
         </div>
         <!-- Box -->
@@ -105,7 +115,217 @@
           </a>
             <div class="box-text">
               <h2>Cars</h2>
-              <h3>PC</h3>
+              <h3>-</h3>
+            </div>
+        </div>
+        <!-- Box -->
+        <div class="box">
+          <a href="#">
+            <img src="./assets/racing/cars-mater-national.png" alt=""/>
+          </a>
+            <div class="box-text">
+              <h2>Cars Mater National Championship</h2>
+              <h3>-</h3>
+            </div>
+        </div>
+        <!-- Box -->
+        <div class="box">
+          <a href="#">
+            <img src="./assets/racing/cars2.png" alt=""/>
+          </a>
+            <div class="box-text">
+              <h2>Cars 2</h2>
+              <h3>-</h3>
+            </div>
+        </div>
+        <!-- Box -->
+        <div class="box">
+          <a href="#">
+            <img src="./assets/racing/chaves-kart.webp" alt=""/>
+          </a>
+            <div class="box-text">
+              <h2>Chaves Kart</h2>
+              <h3>-</h3>
+            </div>
+        </div>
+        <!-- Box -->
+        <div class="box">
+          <a href="#">
+            <img src="./assets/racing/choro-q-advance-2.png" alt=""/>
+          </a>
+            <div class="box-text">
+              <h2>Choro Q Advance 2</h2>
+              <h3>-</h3>
+            </div>
+        </div>
+        <!-- Box -->
+        <div class="box">
+          <a href="#">
+            <img src="./assets/racing/colin-mcrae-rally-2.webp" alt=""/>
+          </a>
+            <div class="box-text">
+              <h2>Colin McRae Rally 2.0</h2>
+              <h3>-</h3>
+            </div>
+        </div>
+        <!-- Box -->
+        <div class="box">
+          <a href="#">
+            <img src="./assets/racing/colin-mcrae-rally-remastered.jpg" alt=""/>
+          </a>
+            <div class="box-text">
+              <h2>Colin McRae Rally Remastered</h2>
+              <h3>-</h3>
+            </div>
+        </div>
+        <!-- Box -->
+        <div class="box">
+          <a href="#">
+            <img src="./assets/racing/corvette.jpg" alt=""/>
+          </a>
+            <div class="box-text">
+              <h2>Corvette</h2>
+              <h3>-</h3>
+            </div>
+        </div>
+        <!-- Box -->
+        <div class="box">
+          <a href="#">
+            <img src="./assets/racing/downhill-domination.png" alt=""/>
+          </a>
+            <div class="box-text">
+              <h2>Downhill Domination</h2>
+              <h3>-</h3>
+            </div>
+        </div>
+        <!-- Box -->
+        <div class="box">
+          <a href="#">
+            <img src="./assets/racing/f1-06.jpg" alt=""/>
+          </a>
+            <div class="box-text">
+              <h2>F1 2006</h2>
+              <h3>-</h3>
+            </div>
+        </div>
+        <!-- Box -->
+        <div class="box">
+          <a href="#">
+            <img src="./assets/racing/f1-2014.jpg" alt=""/>
+          </a>
+            <div class="box-text">
+              <h2>F1 2014</h2>
+              <h3>-</h3>
+            </div>
+        </div>
+        <!-- Box -->
+        <div class="box">
+          <a href="#">
+            <img src="./assets/racing/f1-race-stars.jpg" alt=""/>
+          </a>
+            <div class="box-text">
+              <h2>F1 Race Stars</h2>
+              <h3>-</h3>
+            </div>
+        </div>
+        <!-- Box -->
+        <div class="box">
+          <a href="#">
+            <img src="./assets/racing/flatout.jpg" alt=""/>
+          </a>
+            <div class="box-text">
+              <h2>FlatOut</h2>
+              <h3>-</h3>
+            </div>
+        </div>
+        <!-- Box -->
+        <div class="box">
+          <a href="#">
+            <img src="./assets/racing/flatout-2.jpg" alt=""/>
+          </a>
+            <div class="box-text">
+              <h2>FlatOut 2</h2>
+              <h3>-</h3>
+            </div>
+        </div>
+        <!-- Box -->
+        <div class="box">
+          <a href="#">
+            <img src="./assets/racing/ford-offroad.jpg" alt=""/>
+          </a>
+            <div class="box-text">
+              <h2>Ford Racing: Off Road</h2>
+              <h3>-</h3>
+            </div>
+        </div>
+        <!-- Box -->
+        <div class="box">
+          <a href="#">
+            <img src="./assets/racing/ford-streetracing.jpg" alt=""/>
+          </a>
+            <div class="box-text">
+              <h2>Ford Street Racing</h2>
+              <h3>-</h3>
+            </div>
+        </div>
+        <!-- Box -->
+        <div class="box">
+          <a href="#">
+            <img src="./assets/racing/garfield-kart.jpeg" alt=""/>
+          </a>
+            <div class="box-text">
+              <h2>Garfield Kart</h2>
+              <h3>-</h3>
+            </div>
+        </div>
+        <!-- Box -->
+        <div class="box">
+          <a href="#">
+            <img src="./assets/racing/hill-climb-racing-2.png" alt=""/>
+          </a>
+            <div class="box-text">
+              <h2>Hill Climb Racing 2</h2>
+              <h3>-</h3>
+            </div>
+        </div>
+        <!-- Box -->
+        <div class="box">
+          <a href="#">
+            <img src="./assets/racing/horizon-chase-turbo.jpg" alt=""/>
+          </a>
+            <div class="box-text">
+              <h2>Horizon Chase Turbo</h2>
+              <h3>-</h3>
+            </div>
+        </div>
+        <!-- Box -->
+        <div class="box">
+          <a href="#">
+            <img src="./assets/racing/jungle-racers.jpg" alt=""/>
+          </a>
+            <div class="box-text">
+              <h2>Jungle Racers</h2>
+              <h3>-</h3>
+            </div>
+        </div>
+        <!-- Box -->
+        <div class="box">
+          <a href="#">
+            <img src="./assets/racing/madagascar-kartz.jpg" alt=""/>
+          </a>
+            <div class="box-text">
+              <h2>Madagascar Kartz</h2>
+              <h3>-</h3>
+            </div>
+        </div>
+        <!-- Box -->
+        <div class="box">
+          <a href="#">
+            <img src="./assets/racing/mario-kart-ds.jpg" alt=""/>
+          </a>
+            <div class="box-text">
+              <h2>Mario Kart DS</h2>
+              <h3>-</h3>
             </div>
         </div>
       </div>
